// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components inheritance being parsed correctly 1`] = `
"import styled from "styled-components"


// Should not be picked as \`similarComponent\`
const Div0 = styled.div\`
  common-property1: value-1;
  common-property2: value-2;
  common-property3: value-3;
  common-property4: value-4;
  common-property5: value-5;
\`

// Closest, should be picked as \`similarComponent\`
const Div1 = styled(Div0)\`
  common-property6: value-6;
\`

export default function Component() {
  return (
    (<Div1>
      <Div1 />
    </Div1>)
  );
}
"
`;

exports[`unnamed components should be updated if appropriate 1`] = `
"import styled from "styled-components"
const Div1 = styled.div\`
  common-property1: value-1;
  common-property2: value-2;
  common-property3: value-3;
  common-property4: value-4;
  common-property5: value-5;
\`


const Div0 = styled(Div1)\`
  different-property2: value-2;
\`

const Div2 = styled(Div1)\`
  different-property1: value-1;
\`

export default function Component() {
  return (
    (<Div0>
      <Div2 />
    </Div0>)
  );
}
"
`;

exports[`user-named components should not be overwritten 1`] = `
"import styled from "styled-components"
const Div0 = styled.div\`
  common-property1: value-1;
  common-property2: value-2;
  common-property3: value-3;
  common-property4: value-4;
  common-property5: value-5;
  different-property1: value-1;
\`


// Should not be modified
const Foo = styled.div\`
  common-property1: value-1;
  common-property2: value-2;
  common-property3: value-3;
  common-property4: value-4;
  common-property5: value-5;
  different-property2: value-2;
\`

export default function Component() {
  return (
    (<Foo>
      <Div0 />
    </Foo>)
  );
}
"
`;
